# binder-for-linux

./: .gitignore  CMakeLists.txt  project.sh  test.sh
driver/ashmem/: ashmem.c
driver/binder/: binder.c
libs/: CMakeLists.txt  Makefile
libs/base/: CMakeLists.txt
libs/base/include/android-base/: chrono_utils.h
libs/binder/: CMakeLists.txt  IMemory.cpp  IpPrefix.cpp  Makefile  MemoryHeapBase.cpp  Parcel.cpp  PersistableBundle.cpp  Value.cpp
libs/binder/include/binder/: Parcel.h
libs/binder/include/private/binder/: binder_module.h
libs/binder/tests/: CMakeLists.txt
libs/cutils/: Makefile  ashmem-dev.c  properties.cpp  sched_policy.cpp  sockets_unix.cpp  str_parms.c
libs/demangle/: CMakeLists.txt  Demangler.cpp
libs/include/: 7z.h  7zAlloc.h  7zBuf.h  7zCrc.h  7zFile.h  7zTypes.h  7zVersion.h  Aes.h  Alloc.h  Bcj2.h  Bra.h  Compiler.h  CpuArch.h  Delta.h  DllSecur.h  LzFind.h  LzFindMt.h  LzHash.h  Lzma2Dec.h  Lzma2Enc.h  Lzma86.h  LzmaDec.h  LzmaEnc.h  LzmaLib.h  MtCoder.h  Ppmd.h  Ppmd7.h  Precomp.h  RotateDefs.h  Sha256.h  Sort.h  Threads.h  Xz.h  XzCrc64.h  XzEnc.h  binder  demangle.h  libunwind  safe_iop.h
libs/include/binder/: Parcel.h
libs/include/cutils/: atomic.h  log.h  properties.h
libs/include/private/: binder  fs_config.h
libs/include/utils/: KeyedVector.h  Log.h  SortedVector.h  Vector.h
libs/libbacktrace/: CMakeLists.txt
libs/libcutils/: CMakeLists.txt  ashmem-dev.c
libs/libcutils/include/cutils/: jstring.h
libs/liblog/: CMakeLists.txt
libs/libunwind/: CMakeLists.txt
libs/libutils/: CMakeLists.txt  PropertyMap.cpp
libs/lzma/C/: CMakeLists.txt
libs/safe-iop/: CMakeLists.txt
libs/utils/: Makefile  SharedBuffer.cpp  StrongPointer.cpp  Unicode.cpp  VectorImpl.cpp
test/: Makefile
test_res/: parse.py
