enable_language(ASM)
if (CMAKE_ASM_COMPILER_WORKS)
    set(asm_src
        src/x86_64/getcontext.S
        src/x86_64/setcontext.S
        )
endif(CMAKE_ASM_COMPILER_WORKS)

add_library(unwind_local
        src/mi/init.c
        src/mi/flush_cache.c
        src/mi/mempool.c
        src/mi/strerror.c
        src/mi/backtrace.c
        src/mi/dyn-cancel.c
        src/mi/dyn-info-list.c
        src/mi/dyn-register.c
        src/mi/map.c
        src/mi/Lmap.c
        src/mi/Ldyn-extract.c
        src/mi/Lfind_dynamic_proc_info.c
        src/mi/Lget_proc_info_by_ip.c
        src/mi/Lget_proc_name.c
        src/mi/Lput_dynamic_unwind_info.c
        src/mi/Ldestroy_addr_space.c
        src/mi/Lget_reg.c
        src/mi/Lset_reg.c
        src/mi/Lget_fpreg.c
        src/mi/Lset_fpreg.c
        src/mi/Lset_caching_policy.c
        src/mi/Gdyn-extract.c
        src/mi/Gdyn-remote.c
        src/mi/Gfind_dynamic_proc_info.c
        src/mi/Gget_accessors.c
        src/mi/Gget_proc_info_by_ip.c
        src/mi/Gget_proc_name.c
        src/mi/Gput_dynamic_unwind_info.c
        src/mi/Gdestroy_addr_space.c
        src/mi/Gget_reg.c
        src/mi/Gset_reg.c
        src/mi/Gget_fpreg.c
        src/mi/Gset_fpreg.c
        src/mi/Gset_caching_policy.c
        src/dwarf/Lexpr.c
        src/dwarf/Lfde.c
        src/dwarf/Lparser.c
        src/dwarf/Lpe.c
        src/dwarf/Lstep_dwarf.c
        src/dwarf/Lfind_proc_info-lsb.c
        src/dwarf/Lfind_unwind_table.c
        src/dwarf/Gexpr.c
        src/dwarf/Gfde.c
        src/dwarf/Gfind_proc_info-lsb.c
        src/dwarf/Gfind_unwind_table.c
        src/dwarf/Gparser.c
        src/dwarf/Gpe.c
        src/dwarf/Gstep_dwarf.c
        src/dwarf/global.c
        src/os-common.c
        src/os-linux.c
        src/Los-common.c
        src/ptrace/_UPT_accessors.c
        src/ptrace/_UPT_access_fpreg.c
        src/ptrace/_UPT_access_mem.c
        src/ptrace/_UPT_access_reg.c
        src/ptrace/_UPT_create.c
        src/ptrace/_UPT_destroy.c
        src/ptrace/_UPT_find_proc_info.c
        src/ptrace/_UPT_get_dyn_info_list_addr.c
        src/ptrace/_UPT_put_unwind_info.c
        src/ptrace/_UPT_get_proc_name.c
        src/ptrace/_UPT_reg_offset.c
        src/ptrace/_UPT_resume.c

        src/x86_64/is_fpreg.c
        src/x86_64/regname.c
        src/x86_64/Gcreate_addr_space.c
        src/x86_64/Gget_proc_info.c
        src/x86_64/Gget_save_loc.c
        src/x86_64/Gglobal.c
        src/x86_64/Ginit.c
        src/x86_64/Ginit_local.c
        src/x86_64/Ginit_remote.c
        src/x86_64/Gregs.c
        src/x86_64/Gresume.c
        src/x86_64/Gstep.c
        src/x86_64/Lcreate_addr_space.c
        src/x86_64/Lget_proc_info.c
        src/x86_64/Lget_save_loc.c
        src/x86_64/Lglobal.c
        src/x86_64/Linit.c
        src/x86_64/Linit_local.c
        src/x86_64/Linit_remote.c
        src/x86_64/Lregs.c
        src/x86_64/Lresume.c
        src/x86_64/Lstep.c

        ${asm_src}
        src/x86_64/Gstash_frame.c
        src/x86_64/Gtrace.c
        src/x86_64/Gos-linux.c
        src/x86_64/Lstash_frame.c
        src/x86_64/Ltrace.c
        src/x86_64/Los-linux.c
        src/elf64.c
        )

target_include_directories(unwind_local PRIVATE include include/tdep-x86_64 src ../include)
target_link_libraries(unwind_local PUBLIC lzma pthread)
target_compile_options(unwind_local PRIVATE
        -DHAVE_CONFIG_H
        -D_GNU_SOURCE
        -DNDEBUG
        )
